--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
-*{
+* {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#contener {
+    background-color: #333;
+    border: 3px solid red;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: 100px auto 50%;
+    grid-template-rows: 70% 30%;
+    gap: 10px;
+    height: 35vh;
+}
+
+#contener div{
+    background: #CCC;
+    border: 1px solid blue;
+    padding: 10px;
+}
+
+#code{
+    height: 100px;
+    width: 500px;
 }
